--- a/bible-school-on-wheels.html
+++ b/bible-school-on-wheels.html
@@ -9,7 +9,10 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="logo">Bible School on Wheels</h1>
+      <div class="logo">
+        <img src="https://res.cloudinary.com/dcvvxtq8f/image/upload/v1763211308/teachnations_logo_uganda_gmczhp.jpg" alt="Teach Nations" class="logo-img" />
+        <span>Bible School on Wheels</span>
+      </div>
       <nav>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
@@ -20,89 +23,177 @@
     </div>
   </header>
 
-  <main class="container">git 
+  <main class="container">
     <section class="card">
+      <img src="https://res.cloudinary.com/dcvvxtq8f/image/upload/v1763212454/bsow_cltwir.png" alt="Bible School on Wheels" style="margin-bottom:1rem;border-radius:8px;width:100%;height:auto;object-fit:cover;max-height:400px" />
       <h2>About Bible School on Wheels</h2>
       <p>Our mobile Bible School brings discipleship, leadership training and career development directly to local communities over a structured three-year curriculum.</p>
     </section>
 
     <section class="card">
-      <h3>Bible School On Wheels 1 — Foundations</h3>
+      <h3>Bible School On Wheels 1</h3>
       <div class="grid">
         <div class="card course">
-          <img src="assets/course-placeholder.svg" alt="Introduction to Biblical Discipleship" />
-          <h4>Introduction to Biblical Discipleship</h4>
-          <p>Foundational teaching on following Jesus and discipling others.</p>
-          <a class="btn" href="courses/introduction-to-biblical-discipleship.html">View course</a>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
+          <img src="https://res.cloudinary.com/dcvvxtq8f/image/upload/v1763213598/Survey_mphyjs.png" alt="Survey of the Bible" />
+          <h4>Survey of the Bible</h4>
+          <p>Overview of biblical narrative and themes.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
         </div>
         <div class="card course">
-          <img src="assets/course-placeholder.svg" alt="Scripture and Interpretation" />
-          <h4>Scripture & Interpretation</h4>
-          <p>Basics of reading and applying Scripture.</p>
-          <a class="btn" href="courses/scripture-and-interpretation.html">View course</a>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
+          <img src="https://res.cloudinary.com/dcvvxtq8f/image/upload/v1763212289/70x7-on-TEN_zinbx5.jpg" alt="Forgiveness" />
+          <h4>Forgiveness</h4>
+          <p>Understanding and practicing biblical forgiveness.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
         </div>
         <div class="card course">
-          <img src="assets/course-placeholder.svg" alt="Personal Spiritual Formation" />
-          <h4>Personal Spiritual Formation</h4>
-          <p>Practices for spiritual growth and character formation.</p>
-          <a class="btn" href="courses/personal-spiritual-formation.html">View course</a>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
+          <img src="assets/course-placeholder.svg" alt="Double Productivity" />
+          <h4>Double Productivity</h4>
+          <p>Strategies to maximize your effectiveness and impact.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="What on Earth is God Doing in My Life" />
+          <h4>What on Earth is God Doing in My Life</h4>
+          <p>Discovering God's purpose and plan for your life.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Anyone Can Be a Great Communicator" />
+          <h4>Anyone Can Be a Great Communicator</h4>
+          <p>Develop powerful communication skills.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Discover Yourself and Others" />
+          <h4>Discover Yourself and Others</h4>
+          <p>Understanding personality and relational dynamics.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Become a Transformed Woman" />
+          <h4>Become a Transformed Woman</h4>
+          <p>Biblical principles for women's spiritual growth.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Equipping Leaders, Leaving a Legacy" />
+          <h4>Equipping Leaders, Leaving a Legacy</h4>
+          <p>Training leaders to make lasting impact.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
         </div>
       </div>
     </section>
 
     <section class="card">
-      <h3>Bible School On Wheels 2 — Leadership & Service</h3>
+      <h3>Bible School On Wheels 2</h3>
       <div class="grid">
         <div class="card course">
-          <img src="assets/course-placeholder.svg" alt="Leadership Principles" />
-          <h4>Leadership Principles</h4>
-          <p>Leadership values and practical skills for church and community.</p>
-          <a class="btn" href="courses/leadership-principles.html">View course</a>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
+          <img src="assets/course-placeholder.svg" alt="Consecration" />
+          <h4>Consecration</h4>
+          <p>Deepening your commitment and dedication to God.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
         </div>
         <div class="card course">
-          <img src="assets/course-placeholder.svg" alt="Community Project Design" />
-          <h4>Community Project Design</h4>
-          <p>Planning and running community impact projects.</p>
-          <a class="btn" href="courses/community-project-design.html">View course</a>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
+          <img src="assets/course-placeholder.svg" alt="Multiply Your Productivity" />
+          <h4>Multiply Your Productivity</h4>
+          <p>Advanced strategies for exponential effectiveness.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
         </div>
         <div class="card course">
-          <img src="assets/course-placeholder.svg" alt="Pastoral Care and Counseling" />
-          <h4>Pastoral Care & Counseling</h4>
-          <p>Basics of caring for people in pastoral and community settings.</p>
-          <a class="btn" href="courses/pastoral-care-and-counseling.html">View course</a>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
+          <img src="assets/course-placeholder.svg" alt="You Were Born for This" />
+          <h4>You Were Born for This</h4>
+          <p>Discovering and fulfilling your divine calling.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Vision of the Leader" />
+          <h4>Vision of the Leader</h4>
+          <p>Developing and casting vision for leadership.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Anyone Can Become a Great Motivator" />
+          <h4>Anyone Can Become a Great Motivator</h4>
+          <p>Skills to inspire and motivate others effectively.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Basics of Leadership" />
+          <h4>Basics of Leadership</h4>
+          <p>Foundational leadership principles and practices.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Women Who Make a Difference" />
+          <h4>Women Who Make a Difference</h4>
+          <p>Empowering women to lead and create impact.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Marks Man" />
+          <h4>Marks Man</h4>
+          <p>Character formation for godly men of influence.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
         </div>
       </div>
     </section>
 
     <section class="card">
-      <h3>Bible School On Wheels 3 — Career & Deployment</h3>
+      <h3>Bible School On Wheels 3</h3>
       <div class="grid">
         <div class="card course">
-          <img src="assets/course-placeholder.svg" alt="Marketplace Calling" />
-          <h4>Marketplace Calling</h4>
-          <p>Integrating faith and vocation in the workplace.</p>
-          <a class="btn" href="courses/marketplace-calling.html">View course</a>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
+          <img src="assets/course-placeholder.svg" alt="Testing of Your Faith" />
+          <h4>Testing of Your Faith</h4>
+          <p>Understanding and growing through trials.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
         </div>
         <div class="card course">
-          <img src="assets/course-placeholder.svg" alt="Leadership Practicum" />
-          <h4>Leadership Practicum</h4>
-          <p>Practical placement and mentorship for emerging leaders.</p>
-          <a class="btn" href="courses/leadership-practicum.html">View course</a>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
+          <img src="assets/course-placeholder.svg" alt="Breakthrough to the Next Level" />
+          <h4>Breakthrough to the Next Level</h4>
+          <p>Overcoming barriers to spiritual advancement.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
         </div>
         <div class="card course">
-          <img src="assets/course-placeholder.svg" alt="Capstone and Commissioning" />
-          <h4>Capstone & Commissioning</h4>
-          <p>Final project, assessment and commissioning service.</p>
-          <a class="btn" href="courses/capstone-and-commissioning.html">View course</a>
-          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener" style="margin-left:.5rem">Register</a>
+          <img src="assets/course-placeholder.svg" alt="Realizing God's Abundant Blessings" />
+          <h4>Realizing God's Abundant Blessings</h4>
+          <p>Walking in the fullness of God's promises.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Biblical Portrait of Marriage" />
+          <h4>Biblical Portrait of Marriage</h4>
+          <p>God's design for marriage and family.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Anyone Can Teach Students to Excel" />
+          <h4>Anyone Can Teach Students to Excel</h4>
+          <p>Effective teaching strategies for student success.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="True Spirituality" />
+          <h4>True Spirituality</h4>
+          <p>Authentic faith and spiritual maturity.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Motivate (Secrets of Parenting)" />
+          <h4>Motivate (Secrets of Parenting)</h4>
+          <p>Biblical parenting principles and practices.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Prayer of Jabez for Women" />
+          <h4>Prayer of Jabez for Women</h4>
+          <p>Discovering God's blessing through prayer.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
+        </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Laws of Teacher" />
+          <h4>Laws of Teacher</h4>
+          <p>Timeless principles for effective teaching.</p>
+          <a class="btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfR-QvOkHJ6RQFX_vbGfQC4bV0rGlZ3tP8s0SYhxb0b-X9qxA/viewform" target="_blank" rel="noopener">Register</a>
         </div>
       </div>
     </section>
