--- a/index.html
+++ b/index.html
@@ -11,14 +11,23 @@
   <a class="skip-link" href="#main">Skip to main content</a>
   <header class="site-header" role="banner">
     <div class="container">
-      <h1 class="logo">Teach Nations</h1>
-      <nav>
+      <div class="logo">
+        <img src="https://res.cloudinary.com/dcvvxtq8f/image/upload/v1763211308/teachnations_logo_uganda_gmczhp.jpg" alt="Teach Nations" class="logo-img" />
+        <span>Teach Nations</span>
+      </div>
+      <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+        <span class="hamburger-line"></span>
+      </button>
+      <nav class="nav-menu">
         <ul class="nav-list">
           <li><a href="#about">About</a></li>
           <li><a href="#courses">Courses</a></li>
           <li><a href="#events">Conferences</a></li>
           <li><a href="#community">Community</a></li>
           <li><a href="lms.html">LMS</a></li>
+          <li><a href="our-story.html">Our Story</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -28,7 +37,7 @@
   <section class="hero">
     <div class="container">
       <h2>Transforming nations through discipleship, leadership training and career development</h2>
-      <p>Online courses • Conferences • Community programs</p>
+      <p>Bible School Courses • Conferences • Community programs</p>
       <div class="cta-row">
         <a class="btn primary" href="#courses">Explore Courses</a>
         <a class="btn" href="#events">Upcoming Conferences</a>
@@ -45,38 +54,29 @@
 
     <section id="focus" class="card">
       <h3>Our Focus Areas</h3>
-      <div class="focus-list">
-        <h4>1. Bible School on Wheels (BSOW)</h4>
-        <p>The Bible School on Wheels is our foundational discipleship and leadership training platform. It offers a structured pathway for leaders, pastors, and students to study and grow in their faith through biblically grounded and practical courses delivered through online communities, local training centers, and church-based hubs.</p>
-        <p>Sample BSOW courses:</p>
-        <ul>
-          <li>Survey of the Bible</li>
-          <li>Forgiveness: 70x7</li>
-          <li>What on Earth is God Doing in My Life?</li>
-          <li>Double Your Productivity</li>
-        </ul>
-
-        <h4>2. Schools Discipleship Programs</h4>
-        <p>We shape the next generation through faith-based education and mentorship. Teach Nations runs Schools Discipleship Programs across multiple countries in partnership with organisations like Scripture Union, empowering teachers, chaplains, and high school students to live out their faith with conviction and compassion.</p>
-        <ul>
-          <li>Training and mentoring school patrons and deans to lead Bible study groups.</li>
-          <li>Providing biblical materials and leadership courses tailored for students.</li>
-          <li>Offering career guidance and mentorship sessions to help students discover their calling.</li>
-        </ul>
-
-        <h4>3. Community Development Programs (Good Works)</h4>
-        <p>We believe faith is demonstrated through action. Our Community Development Programs extend Christ’s love beyond classrooms into everyday life through educational support, health care visits, support for vulnerable mothers, and livelihood projects.</p>
-        <ul>
-          <li>Educational Support: providing school supplies and learning materials.</li>
-          <li>Health Care & Compassion Visits: weekly hospital visits for mothers and children.</li>
-          <li>Support for Mothers: care and material assistance for vulnerable mothers in Kyebando and nearby communities.</li>
-          <li>Community Empowerment Projects: outreach and livelihood initiatives that promote dignity and hope.</li>
-        </ul>
-
-        <div class="fund-note">
-          <strong>TEN Fund (2025)</strong>
-          <p>In 2025 we launched the TEN Fund — a student-led initiative to sponsor 100 children in school each term with a contribution of UGX 100,000 per child. This program is fully driven by Teach Nations students and reflects our heart for generosity and sustainable community transformation.</p>
+      <div class="grid">
+        <div class="card course">
+          <img src="assets/bsow-banner.svg" alt="Bible School on Wheels" />
+          <h4>Bible School on Wheels (BSOW)</h4>
+          <p>Our foundational discipleship and leadership training platform offering a structured pathway through biblically grounded courses delivered online and in local communities.</p>
+          <a class="btn" href="bible-school-on-wheels.html">Read more</a>
         </div>
+        <div class="card course">
+          <img src="assets/course-placeholder.svg" alt="Schools Discipleship Programs" />
+          <h4>Schools Discipleship Programs</h4>
+          <p>Shaping the next generation through faith-based education and mentorship in partnership with organizations like Scripture Union across multiple countries.</p>
+          <a class="btn" href="schools-discipleship.html">Read more</a>
+        </div>
+        <div class="card course">
+          <img src="assets/community-placeholder.svg" alt="Community Development Programs" />
+          <h4>Community Development Programs</h4>
+          <p>Demonstrating faith through action with educational support, health care, support for vulnerable mothers, and livelihood projects.</p>
+          <a class="btn" href="community-development.html">Read more</a>
+        </div>
+      </div>
+      <div class="fund-note" style="margin-top:1.5rem">
+        <strong>TEN Fund (2025)</strong>
+        <p>In 2025 we launched the TEN Fund — a student-led initiative to sponsor 100 children in school each term with a contribution of UGX 100,000 per child. This program is fully driven by Teach Nations students and reflects our heart for generosity and sustainable community transformation.</p>
       </div>
     </section>
 
@@ -88,45 +88,14 @@
     <section id="team" class="card">
       <h3>Our Team</h3>
       <div class="team-grid">
-        <div class="team-card"><img src="assets/team-placeholder.svg" alt="Brian Mucyo"/><h4>Brian Mucyo</h4><p class="role">Executive Director</p><p>Provides overall vision, leadership, and strategic direction for Teach Nations.</p></div>
-        <div class="team-card"><img src="assets/team-placeholder.svg" alt="Anthony Bugembe"/><h4>Anthony Bugembe</h4><p class="role">Director of Programs</p><p>Oversees program implementation, curriculum, and training across all focus areas.</p></div>
-        <div class="team-card"><img src="assets/team-placeholder.svg" alt="Edmond Kyanzi"/><h4>Edmond Kyanzi</h4><p class="role">Dean of Students</p><p>Leads academic coordination, student discipleship, and performance evaluation.</p></div>
+        <div class="team-card"><img src="https://res.cloudinary.com/dcvvxtq8f/image/upload/v1763210849/Brian_Mucyo_kjz4gm.jpg" alt="Brian Mucyo"/><h4>Brian Mucyo</h4><p class="role">Executive Director</p><p>Provides overall vision, leadership, and strategic direction for Teach Nations.</p></div>
+        <div class="team-card"><img src="https://res.cloudinary.com/dcvvxtq8f/image/upload/v1763210851/Anthony_BUGEMBE_jmbvbw.jpg" alt="Anthony Bugembe"/><h4>Anthony Bugembe</h4><p class="role">Director of Programs</p><p>Oversees program implementation, curriculum, and training across all focus areas.</p></div>
+        <div class="team-card"><img src="https://res.cloudinary.com/dcvvxtq8f/image/upload/v1763210850/Edmond_Kyanzi_och9v8.jpg" alt="Edmond Kyanzi"/><h4>ond Kyanzi</h4><p class="role">Dean of Students</p><p>Leads academic coordination, student discipleship, and performance evaluation.</p></div>
         <div class="team-card"><img src="assets/team-placeholder.svg" alt="Agnes Naluwagga"/><h4>Agnes Naluwagga</h4><p class="role">Programs Coordinator – Schools</p><p>Manages school-based programs and partnerships with Scripture Union.</p></div>
         <div class="team-card"><img src="assets/team-placeholder.svg" alt="Sarah Sanyu"/><h4>Sarah Sanyu</h4><p class="role">Programs Coordinator – Community</p><p>Leads community outreach and 'Good Works' initiatives.</p></div>
         <div class="team-card"><img src="assets/team-placeholder.svg" alt="Patricia Kyomugisha"/><h4>Patricia Kyomugisha</h4><p class="role">Head of Administration & Finance</p><p>Oversees financial management, logistics, and operational systems.</p></div>
         <div class="team-card"><img src="assets/team-placeholder.svg" alt="Alex Catherine Nagawa"/><h4>Alex Catherine Nagawa</h4><p class="role">Communications Manager</p><p>Manages internal and external communications, media, and partnerships.</p></div>
       </div>
-    </section>
-
-    <section id="courses" class="grid">
-      <h3>Online Courses</h3>
-      <div class="card course">
-        <h4>Bible School on Wheels</h4>
-        <p>Mobile Bible School program bringing discipleship and leadership training to communities.</p>
-        <a class="btn" href="bible-school-on-wheels.html">Learn more</a>
-      </div>
-      <div class="card course">
-        <h4>Leadership & Governance</h4>
-        <p>Develop practical leadership skills for church, marketplace and civic spheres.</p>
-        <a class="btn" href="#">Learn more</a>
-      </div>
-      <div class="card course">
-        <h4>Career Development</h4>
-        <p>Courses to help you grow professionally and steward your calling in the workplace.</p>
-        <a class="btn" href="#">Learn more</a>
-      </div>
-    </section>
-
-    <section id="events" class="card">
-      <h3>Conferences</h3>
-      <p>Join regional and global conferences where leaders gather for teaching, strategy and activation.</p>
-      <a class="btn" href="#">View calendar</a>
-    </section>
-
-    <section id="community" class="card">
-      <h3>Community Engagement</h3>
-      <p>Local hubs and online groups that practice discipleship and serve communities.</p>
-      <a class="btn" href="#">Get involved</a>
     </section>
 
     <section id="register" class="card" aria-labelledby="register-heading">
