--- a/lms.html
+++ b/lms.html
@@ -9,7 +9,10 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="logo">Teach Nations — LMS</h1>
+      <div class="logo">
+        <img src="https://res.cloudinary.com/dcvvxtq8f/image/upload/v1763211308/teachnations_logo_uganda_gmczhp.jpg" alt="Teach Nations" class="logo-img" />
+        <span>Teach Nations — LMS</span>
+      </div>
       <nav>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
@@ -22,6 +25,7 @@
 
   <main class="container">
     <section class="card">
+      <img src="assets/lms-banner.svg" alt="Moodle LMS" style="margin-bottom:1rem" />
       <h2>Moodle LMS</h2>
       <p>Access Teach Nations courses and learning pathways via our Moodle instance below.</p>
       <p class="register-note">If the Moodle instance does not display, click the "Open in new tab" button to load it directly.</p>
