--- a/ten-fund.html
+++ b/ten-fund.html
@@ -10,7 +10,10 @@
   <a class="skip-link" href="#main">Skip to main content</a>
   <header class="site-header" role="banner">
     <div class="container">
-      <h1 class="logo">TEN Fund</h1>
+      <div class="logo">
+        <img src="https://res.cloudinary.com/dcvvxtq8f/image/upload/v1763211308/teachnations_logo_uganda_gmczhp.jpg" alt="Teach Nations" class="logo-img" />
+        <span>TEN Fund</span>
+      </div>
       <nav>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
@@ -21,6 +24,7 @@
   </header>
   <main id="main" class="container" role="main">
     <section class="card">
+      <img src="assets/ten-fund-placeholder.svg" alt="TEN Fund" style="margin-bottom:1rem" />
       <h2>TEN Fund — Sponsor a Child</h2>
       <p>The TEN Fund is a student-led initiative to sponsor 100 children in school each term with a contribution of UGX 100,000 per child. Your gift helps provide school fees, supplies and hope.</p>
       <h3>How to contribute</h3>
