--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
     <section id="contact" class="card contact">
       <h3>Contact</h3>
       <p>Email: <a href="mailto:info@teachnations.org">info@teachnations.org</a></p>
-      <p>Address: Teach Nations (online)</p>
+      <p>Address: Teach Nations, Bukoto Kampala</p>
     </section>
   </main>
 
   <footer class="site-footer">
     <div class="container">
       <p>&copy; 2025 Teach Nations — All rights reserved.</p>
-      <p><small>Built with ❤️ for mission-focused learning.</small></p>
+      <p><small>Built for mission-focused learning.</small></p>
     </div>
   </footer>
 
