--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
       <nav class="nav-menu">
         <ul class="nav-list">
           <li><a href="#about">About</a></li>
-          <li><a href="#courses">Courses</a></li>
-          <li><a href="#events">Conferences</a></li>
+          <li><a href="./bible-school-on-wheels.html">Bible School Courses</a></li>
           <li><a href="#community">Community</a></li>
-          <li><a href="lms.html">LMS</a></li>
+          <li><a href="schools-discipleship.html">Schools Discipleship Programs</a></li>
           <li><a href="our-story.html">Our Story</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
