--- a/index.html
+++ b/index.html
@@ -73,9 +73,15 @@
           <a class="btn" href="community-development.html">Read more</a>
         </div>
       </div>
-      <div class="fund-note" style="margin-top:1.5rem">
-        <strong>TEN Fund (2025)</strong>
-        <p>In 2025 we launched the TEN Fund — a student-led initiative to sponsor 100 children in school each term with a contribution of UGX 100,000 per child. This program is fully driven by Teach Nations students and reflects our heart for generosity and sustainable community transformation.</p>
+    </section>
+
+    <section id="ten-fund" class="card">
+      <h3>TEN Fund (2025)</h3>
+      <img src="assets/ten-fund-placeholder.svg" alt="TEN Fund" style="margin-bottom:1rem" />
+      <p>In 2025 we launched the TEN Fund — a student-led initiative to sponsor 100 children in school each term with a contribution of UGX 100,000 per child. This program is fully driven by Teach Nations students and reflects our heart for generosity and sustainable community transformation.</p>
+      <div style="margin-top:1rem">
+        <a class="btn primary" href="ten-fund.html">Donate Now</a>
+        <a class="btn" href="ten-fund.html" style="margin-left:0.5rem">Read more</a>
       </div>
     </section>
 
