--- a/our-story.html
+++ b/our-story.html
@@ -93,7 +93,7 @@
       <p>See the lives transformed, communities empowered, and leaders raised through our programs.</p>
       <div class="story-grid">
         <div class="story-card">
-          <img src="assets/course-placeholder.svg" alt="Bible School training session" />
+          <img src="https://res.cloudinary.com/dcvvxtq8f/image/upload/v1763209548/IMGL4356_u61mym.jpg" alt="Bible School training session" />
           <div class="story-card-content">
             <h4>Bible School on Wheels</h4>
             <p>Students gather for discipleship training in local communities across the nation.</p>
